--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@headlessui/react": "^1.7.4",
     "@heroicons/react": "^1.0.5",
     "@radix-ui/react-dialog": "^1.0.2",
+    "@radix-ui/react-hover-card": "^1.0.6",
     "@splidejs/react-splide": "^0.7.5",
     "@supabase/supabase-js": "^2.2.1",
     "@vercel/og": "^0.1.0",
@@ -51,7 +52,7 @@
     "postcss": "^8.4.18",
     "prettier": "^2.8.4",
     "prettier-plugin-tailwindcss": "^0.2.2",
-    "tailwindcss": "^3.3.1",
+    "tailwindcss": "^3.3.2",
     "typescript": "^5.0.3"
   }
 }
