--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-hot-toast": "^2.2.0",
     "react-lite-youtube-embed": "^2.3.52",
     "react-loading-skeleton": "^3.0.2",
+    "react-select": "^5.7.3",
     "react-table": "^7.8.0",
     "swr": "^2.0.0",
     "tailwind-scrollbar": "^1.3.1",
