--- a/.env.local.example
+++ b/.env.local.example
@@ -7,3 +7,8 @@ SUPABASE_SERVICE_ROLE_KEY=
 NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=pk_test_1234
 STRIPE_SECRET_KEY=sk_test_1234
 STRIPE_WEBHOOK_SECRET=whsec_1234
+
+NEXT_PUBLIC_API_ROUTE=http://localhost
+SUPABASE_URL=https://project.supabase.co
+SUPABASE_ANON_KEY=anon_key
+JWT_SECRET=jwt_secret
