--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "tailwind-scrollbar": "^1.3.1",
     "tailwindcss-radix": "^2.6.1",
     "yup": "^0.32.11",
+    "zod": "^3.21.4",
     "zustand": "^4.3.1"
   },
   "devDependencies": {
