--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "zustand": "^4.3.1"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.0.2",
     "@playwright/test": "^1.35.0",
     "@tailwindcss/forms": "^0.5.2",
     "@types/node": "^17.0.12",
