--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-loading-skeleton": "^3.0.2",
     "react-select": "^5.7.3",
     "react-table": "^7.8.0",
+    "slug": "^8.2.2",
     "swr": "^2.0.0",
     "tailwind-scrollbar": "^1.3.1",
     "tailwindcss-radix": "^2.6.1",
