--- a/.env.local.example
+++ b/.env.local.example
@@ -8,7 +8,9 @@ NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=pk_test_1234
 STRIPE_SECRET_KEY=sk_test_1234
 STRIPE_WEBHOOK_SECRET=whsec_1234
 
-NEXT_PUBLIC_API_ROUTE=http://localhost
+# Use This
+NEXT_PUBLIC_API_ROUTE=http://localhost:3000
 SUPABASE_URL=https://project.supabase.co
-SUPABASE_ANON_KEY=anon_key
-JWT_SECRET=jwt_secret
+SUPABASE_ANON_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9
+JWT_SECRET=hIeC2nLWT1VurroJ
+NEXTAUTH_URL=http://localhost:3000
