--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "clsx": "^1.2.1",
     "jsonwebtoken": "^9.0.0",
     "next": "^13.3.0",
+    "next-auth": "^4.22.1",
     "next-themes": "^0.2.1",
     "nookies": "^2.5.2",
     "nprogress": "^0.2.0",
